Parser/Gramatica.txt
INICIO -> INSTRUCCIONES

INSTRUCCIONES -> INSTRUCCIONES INSTRUCCION
		| INSTRUCCION 

INSTRUCCION -> DECLARACION_VARIABLE
		| SENTENCIA_DDL
		| SENTENCIA_DML
		| LLAMAR_PROCEDURE

DECLARACION_VARIABLE -> 'DECLARE' IDENTIFICADOR TIPO_DATO ';'

TIPO_DATO -> SEG_NUM
	| SEG_DATE
	| SET_STRING

SEG_NUM -> 'INT'
	| 'BIT'
	| 'DECIMAL' '(' NUMERO ',' NUMERO ')' 

SEG_DATE -> 'DATE'
	| 'DATETIME'

SEG_STRING -> 'NCHAR' '(' NUMERO ')'
	| 'NVARCHAR' '(' NUMERO ')'

SENTENCIA_DDL -> CREATE
		| ALTER
		| DROP
		| TRUNCATE

CREATE -> 'CREATE' 'DATABASE' IDENTIFICADOR ';'
	| 'CREATE' 'TABLE' IDENTIFICADOR '(' CAMPOS_TABLE ')' ';'
	| 'CREATE' 'PROCEDURE' IDENTIFICADOR '(' PARAMETROS ')' 'AS' 'BEGIN' LISTA_SENTENCIAS_DML 'END' ';'
	| 'CREATE' 'FUNCTION' IDENTIFICADOR '(' PARAMETROS ')' 'RETURN' TIPO_DATO 'AS' 'BEGIN' LISTA_SENTENCIAS_DML 'END' ';'
	
CAMPOS_TABLE -> CAMPOS_TABLE ',' IDENTIFICADOR TIPO_DATO CONSTRAIN
		| CAMPOS_TABLE ',' IDENTIFICADOR TIPO_DATO
		| IDENTIFICADOR TIPO_DATO CONSTRAIN		
		| IDENTIFICADOR TIPO_DATO

PARAMETROS -> PARAMETROS ',' IDENTIFICADOR TIPO_DATO
			| IDENTIFICADOR TIPO_DATO

CONSTRAIN -> 'PRIMARY KEY'
		| 'NOT NULL'
		| 'REFERENCES' IDENTIFICADOR '(' IDENTIFICADOR ')'

ALTER -> 'ALTER' 'TABLE' IDENTIFICADOR ACCION ';'

ACCION -> 'ADD' IDENTIFICADOR TIPO_DATO 
      | 'DROP' IDENTIFICADOR

DROP -> 'DROP' 'DATABASE' IDENTIFICADOR ';'
		| 'DROP' 'TABLE' IDENTIFICADOR ';'
		| 'DROP' 'PROCEDURE' IDENTIFICADOR ';'
		| 'DROP' 'FUNCTION' IDENTIFICADOR ';'

TRUNCATE -> 'TRUNCATE' 'TABLE' IDENTIFICADOR ';'

LISTA_SENTENCIAS_DML -> LISTA_SENTENCIAS_DML SENTENCIA_DML 
			| SENTENCIA_DML 

LLAMAR_PROCEDURE -> 'EXEC' IDENTIFICADOR LISTA_EXPRESIONES ';'

SENTENCIA_DML -> SELECT 
		| INSERT
		| UPDATE
		| DELETE
		| 'RETURN' EXPRESION ';'
		| EXPRESION

SELECT -> 'SELECT' MULTIPLICACION 'FROM' IDENTIFICADOR ';'
	| 'SELECT' LISTA_EXPRESIONES 'FROM' IDENTIFICADOR ';'
	| 'SELECT' '(' LISTA_EXPRESIONES ')' 'FROM' IDENTIFICADOR ';'
	| 'SELECT' LISTA_EXPRESIONES FROM IDENTIFICADOR 'WHERE' EXPRESION ';'
	| 'SELECT' '(' LISTA_EXPRESIONES ')' 'FROM' IDENTIFICADOR 'WHERE' EXPRESION ';'
	| 'SELECT' LISTA_EXPRESIONES ';'
	| 'SELECT' IDENTIFICADOR'('')' ';'
	| 'SELECT' IDENTIFICADOR'(' LISTA_EXPRESIONES ')' ';'
	| 'SELECT' IDENTIFICADOR'('')' 'FROM' IDENTIFICADOR ';'
	| 'SELECT' IDENTIFICADOR'(' LISTA_EXPRESIONES ')' 'FROM' IDENTIFICADOR ';'
	| 'SELECT' IDENTIFICADOR'('')' 'FROM' IDENTIFICADOR 'WHERE' EXPRESION ';'
	| 'SELECT' IDENTIFICADOR'(' LISTA_EXPRESIONES ')' 'FROM' IDENTIFICADOR 'WHERE' EXPRESION ';'

INSERT -> 'INSERT INTO' 'IDENTIFICADOR' '(' LISTA_EXPRESIONES ')' 'VALUES' (' LISTA_EXPRESIONES ')' ';'

UPDATE -> 'UPDATE' IDENTIFICADOR 'SET' LISTA_EXPRESIONES 'WHERE' EXPRESION ';'

DELETE -> 'DELETE FROM' IDENTIFICADOR 'WHERE' EXPRESION ';'

LISTA_EXPRESIONES -> LISTA_EXPRESIONES ',' EXPRESION
		| EXPRESION

EXPRESION -> ARITMETICOS
	| RELACIONALES
	| LOGICOS
	| LITERAL
	| '(' EXPRESION ')'
	| FUNCION_NATIVA
	| ASIGNACION
	| IDENTIFICADOR

ASIGNACION -> EXPRESION '=' EXPRESION
	   | 'SET' EXPRESION

FUNCION_NATIVA -> 'CONCATENA' '(' LISTA_EXPRESIONES ')'
		| 'SUBSTRAER' '(' EXPRESION ',' EXPRESION ',' EXPRESION ')'
		| 'HOY''('')'
		| 'CONTAR(' EXPRESION ')'
		| 'SUMA''(' EXPRESION ')'
		| 'CAST''(' EXPRESION 'AS' TIPO_DATO ')'

ARITMETICOS-> EXPRESION MAS EXPRESION
	| EXPRESION MENOS EXPRESION
	| EXPRESION POR EXPRESION
	| EXPRESION DIVIDIDO EXPRESION

RELACIONALES -> EXPRESION MAYOR EXPRESION
	| EXPRESION MENOR EXPRESION
	| EXPRESION MAYOR_IGUAL EXPRESION
	| EXPRESION MENOR_IGUAL EXPRESION
	| EXPRESION DIFERENTE EXPRESION
	| EXPRESION IGUAL_IGUAL EXPRESION
	| 'BETWEEN' EXPRESION 'AND' EXPRESION

LOGICOS -> EXPRESION AND EXPRESION
	| EXPRESION OR EXPRESION 
	| NOT EXPRESION

LITERAL -> NUMERO
	| DECIMAL 
	| FECHA
	| FECHA_HORA
	| VARCHAR
	| NULL

IDENTIFICADOR -> IDENTIFICADOR
   | IDENTIFICADOR'.'IDENTIFICADOR
   | '@'IDENTIFICADOR
